# kmod-rs

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: dirname.rs  insmod.rs  lsmod.rs  modprobe.rs  rmmod.rs
kmod-sys/: Cargo.toml  build.rs  wrapper.h
src/: ctx.rs  errors.rs  info.rs  lib.rs  modules.rs
