[package]
name = "kmod-sys"
version = "0.1.0"
description = "Bindings to libkmod to manage linux kernel modules"
authors = ["kpcyrd <git@rxv.cc>"]
links = "kmod"
license = "MIT/Apache-2.0"
repository = "https://github.com/kpcyrd/kmod-rs"
categories = ["external-ffi-bindings"]

[badges]
travis-ci = { repository = "kpcyrd/kmod-rs" }

[dependencies]

[build-dependencies]
bindgen = "0.33"
